css/global.css
/* 
    Filename: global.css
    Purpose: holds site-wide style rules for the design system website.
    Author: Montana Pistell
    Last Modified: March 6, 2023
*/

/* 
    Attributions: 
    Mobile Navbar Menu using HTML, CSS and JS
    https://dev.to/devggaurav/let-s-build-a-responsive-navbar-and-hamburger-menu-using-html-css-and-javascript-4gci 
*/

/* ---------- Site-Wide Styles ---------- */
* {
  list-style: none;
  text-decoration: none;
  box-sizing: border-box;
  color: var(--charcoal);
  margin: 0;
  padding: 0;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
body, article {
  width: 100%;
}
:root {
  --charcoal: #2f3e46;
  --leaf-green: #6b9e82;
  --light-blue: #a6d5dd;
  --cream: #f2f8f3;
  --ash-grey: #abb9b9;
}
h1 {
  font-weight: 900;
  font-size: 2.4rem;
}
h2 {
  font-weight: 500;
  font-size: 1.8rem;
}
h3 {
  font-weight: 900;
  font-size: 1.4rem;
}
h4 {
  font-weight: 500;
  font-size: 1.1rem;
}
h5 {
  font-weight: 900;
  font-size: 0.9rem;
}
h6 {
  font-weight: 500;
  font-size: 0.7rem;
}
p {
  font-weight: 500;
  font-size: 1rem;
}
p a {
  font-weight: 600;
  font-size: 1rem;
  color: var(--leaf-green);
  text-decoration: none;
  transition: all 0.3s ease-in-out;
}
p a:hover {
  text-decoration: underline;
}
a {
  color: var(--charcoal);
}
a:hover {
  text-decoration: underline;
  color: var(--leaf-green);
}

/* ---------- Header ---------- */
header {
  background-color: var(--charcoal);
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 1;
}
.nav-logo {
  margin: 10px auto;
}
.nav-logo > img {
  width: 300px;
}
.mobile-nav,
.hamburger {
  display: none;
}

/* ---------- Container Layout ---------- */
.container {
  display: flex;
}

/* ---------- Desktop Navigation----------  */
.desktop-nav {
  background-color: var(--cream);
  width: 250px;
  padding: 25px;
}
.desktop-nav > h3 {
  font-size: 1.4em;
  color: var(--charcoal);
  margin: 0 0 25px 0;
}
.desktop-nav-content {
  position: fixed;
}
.top-links {
  font-weight: 600;
  margin: 25px 0 10px 0;
}
.sub-links {
  margin: 0 0 0 15px;
}

/* ---------- Right-Side Content (fullscreen on mobile) ---------- */
article {
  /* margin-left: 200px; */ /* un-comment if using sticky sidebar*/
  width: 80%;
  height: fit-content;
}

/* ---------- Footer ---------- */
footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--charcoal);
  flex-wrap: wrap;
  padding: 25px;
}
.footer-logo > img {
  width: 300px;
}
.contact-info {
  text-align: right;
}
.contact-info > h4 {
  font-weight: 800;
  color: var(--cream);
}
.contact-info p {
  color: var(--cream);
}
.contact-info > p > a {
  color: var(--light-blue);
}

/* ---------- Media Queries ---------- */

/* Phones & Tablets */
@media only screen and (max-width: 768px) {
  .desktop-nav {
    display: none;
  }
  .nav-logo {
    margin: 10px 25px;
  }
  .mobile-nav {
    padding: 1em;
    display: block;
  }
  .hamburger {
    display: block;
    margin: 1em;
    cursor: pointer;
  }
  .bar {
    display: block;
    width: 30px;
    height: 3px;
    margin: 5px 0;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: var(--cream);
    border-radius: 5px;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  .mobile-nav-menu {
    position: absolute;
    z-index: 1;
    left: -100%;
    top: 83px;
    flex-direction: column;
    background-color: var(--cream);
    width: 100%;
    text-align: center;
    transition: 0.3s;
    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
  }
  .mobile-nav-menu-item {
    padding: 1.5em;
    border-bottom: 1px solid var(--charcoal);
  }
  .mobile-nav-menu.active {
    left: 0;
  }
  article {
    width: 100%;
  }
  footer {
    flex-direction: column;
    text-align: center;
  }
  .footer-logo {
    padding-bottom: 1em;
  }
  .contact-info {
    text-align: center;
  }
}

